Fixed icon container layout on smaller screens

--- a/css/3-typography.css
+++ b/css/3-typography.css
@@ -49,4 +49,7 @@ i {
   .h3 {
     font-size: var(--h5);
   }
+  .i-lg {
+    font-size: var(--h5);
+  }
 }
